<resources>

    <string name="app_name">SNRecorder</string>
    <string name="task">record tasks</string>
    <string name="setting">setting</string>
    <string name="query">UID query</string>
    <string name="querybtn">query</string>
    <string name="recorde">Record</string>
    <string name="autoupload">auto upload</string>
    <string name="upload1">disposable upload one barcode</string>
    <string name="upload2">disposable upload two barcode</string>
    <string name="upload3">disposable upload three barcode</string>
    <string name="length_limit1">the limit of length of the first barcode</string>
    <string name="length_limit2">the limit of length of the second barcode</string>
    <string name="length_limit3">the limit of length of the third barcode</string>
    <string name="confirm">confirm</string>
    <string name="scan">scan</string>
    <string name="clear">clear</string>
    <string name="uploadbtn">upload</string>
    <string name="scanned">already scanned</string>
    <string name="total">total</string>
    <string name="barcode1">barcode1</string>
    <string name="barcode2">barcode2</string>
    <string name="barcode3">barcode3</string>
    <string name="timedout">decode timed out</string>
    <string name="cancel">decode cancelled</string>
    <string name="failed">decode failed</string>
    <string name="decoding">decoding</string>
    <string name="state">scan barcode</string>
    <string name="querystate">please input </string>
    <string name="load">loading</string>
    <string name="result">the result</string>
    <string name="repairt">repair records</string>
    <string name="outt">out records</string>
    <string name="uidr">UID:</string>
    <string name="customerr">customer:</string>
    <string name="model">model:</string>
    <string name="costr">cost:</string>
    <string name="issuer">issues:</string>
    <string name="solver">issues resolve:</string>
    <string name="backtr">send back time:</string>
    <string name="warrantyr">warranty:</string>
    <string name="comment">comment:</string>
    <string name="uidnum">UIDsNum:</string>
    <string name="dateo">date:</string>

</resources>
