<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ebeced"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#069" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/recorde"
            android:textColor="#fff"
            android:textSize="25sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#b3b3b6" />
        
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#fff" >

            <TextView
                android:id="@+id/modeltv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/load"
                android:textColor="#121212"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/modeltv"
                android:baselineAligned="false"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/scanned"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:text="@string/load"
                        android:textColor="#069"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/scannedtv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/scanned"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:text="@string/load"
                        android:textColor="#121212"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/totaltv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="@string/total"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rl1"
            android:background="#b3b3b6" />

        
        <RelativeLayout
            android:id="@+id/rl2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl1"
            android:layout_marginTop="10dp"
            android:background="#fff" >

            <TextView
                android:id="@+id/statetv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/state"
                android:textColor="#121212"
                android:textSize="20sp" />

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/statetv"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/selector2"
                android:onClick="doClear"
                android:text="@string/clear"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/container1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/barcodetv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/barcode1"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/barstr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="100dp"
                    android:maxEms="15"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:text=""
                    android:textColor="#121212"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/barcodetv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/barcode2"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/barstr1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="100dp"
                    android:maxEms="15"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:text=""
                    android:textColor="#121212"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/barcodetv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/barcode3"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/barstr2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="100dp"
                    android:maxEms="15"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:text=""
                    android:textColor="#121212"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/scanbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/clear"
                android:layout_marginRight="20dp"
                android:background="@drawable/selector2"
                android:onClick="doScan"
                android:text="@string/scan"
                android:textSize="15sp" />

            <Button
                android:id="@+id/ulbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/scanbtn"
                android:layout_marginRight="20dp"
                android:background="@drawable/selector2"
                android:onClick="doUpload"
                android:text="@string/uploadbtn"
                android:textSize="15sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rl2"
            android:background="#b3b3b6" />
        <RelativeLayout
            android:id="@+id/rl3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rl1"
            android:layout_marginTop="28dp"
            >
        <SlidingDrawer
            android:id="@+id/sduidlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:content="@+id/contentlist"
            android:handle="@+id/open"
            android:orientation="vertical" >

            <ImageView
                android:id="@id/open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_slidopen" />

            <com.baoyz.swipemenulistview.SwipeMenuListView
                android:id="@+id/contentlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"               
                android:background="#f2ce7f" />
        </SlidingDrawer>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#b3b3b6" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>